# food-sales-pipeline

./: README.md  pyproject.toml
Databases/: dump.sql
json/: sales.json
notebook/: experiment.ipynb
