[tool.poetry]
name = "food-sales-pipeline"
version = "0.1.0"
description = ""
authors = ["benedictdebrah <benedictdebrah.o@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
SQLAlchemy = "^2.0.29"
psycopg = "^3.1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
